# filterable-enum

./: Cargo.toml  README.md
filterable-enum-derive/: Cargo.toml
filterable-enum-derive/src/: lib.rs  opts.rs
src/: lib.rs
tests/: derive_impl.rs  manully_impl.rs
