workspace = { members = ["filterable-enum-derive"] }
[package]
name = "filterable-enum"
description = "A library for generating filterable enums (Combining bitflags and discriminated unions)"
categories = []
authors = ["Levi Zim <rsworktech@outlook.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "0.7.9"
filterable-enum-derive = { version = "0.1.0", path = "filterable-enum-derive" }
