[package]
name = "filterable-enum-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.8"
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = "2.0.60"
